--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./public/logoSymble.svg" sizes="any"/>
+    <link rel="icon" type="image/svg+xml" href="/logoSymble.svg" sizes="any"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>akxens</title>
   </head>
