--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/logoBlack.svg" sizes="any" />
+  <link rel="icon" type="image/svg+xml" href="/fav.png" sizes="any" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>akxens</title>
 </head>
