--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/fav.png" sizes="any" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>akxens</title>
+  <title>Akxens</title>
 </head>
 
 <body>
